[package]
name = "poseidon252-hash"
version = "0.1.0"
authors = [
  "Victor Lopez <victor@dusk.network>", "CPerezz <carlos@dusk.network>", "zer0 <matteo@dusk.network>", "Kristoffer Ström <kristoffer@dusk.network>"
]
edition = "2018"

[dependencies]
dusk-bls12_381 = { version = "0.3", default-features = false }
hades252 = { git = "https://github.com/dusk-network/hades252", tag = "v0.10.1", default-features = false }
dusk-plonk = { version = "0.3", optional = true }

[dev-dependencies]
anyhow = "1.0"
rand = "0.7"

[features]
default = ["std"]
std = ["dusk-bls12_381/default", "hades252/default", "dusk-plonk"]
